dsa musings 2024